# NanoVNA-Web-Client

./: .gitignore  Makefile  README.md  copy-minimum.sh  dfu.html  dfu.js  index.html  manifest.json  nanovna.js  package-lock.json  package.json  script.js  sketch.mjs  snp.mjs  worker.js  www.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: android.yml
android/: debug.keystore
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: capacitor.config.json
android/app/src/main/java/net/lowreal/nanovnawebapp/: MainActivity.java
android/app/src/main/res/values/: ic_launcher_background.xml  strings.xml
android/app/src/main/res/xml/: config.xml
android/gradle/wrapper/: gradle-wrapper.properties
dsp-wasm/: Cargo.toml  Makefile  Makefile.toml
dsp-wasm/no-modules/: dsp_wasm.d.ts  dsp_wasm.js  dsp_wasm_bg.d.ts  dsp_wasm_bg.wasm  package.json
dsp-wasm/src/: lib.rs
etc/: 99-nanovna.rules
images/: splash.psd
lib/: chartjs-chart-smith.js  comlink  material-design-icons-iconfont  micro-strptime.js  strftime-min.js  theme  vue-material.min.css  vue-material.min.js  vue.js  vue.min.js
