[package]
name = "dsp-wasm"
version = "0.1.0"
authors = ["cho45 <cho45@lowreal.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wee_alloc = "*"
rustfft = "*"
console_error_panic_hook = "*"
